# fast-mcp-practice

./: mcp.json
data/: meeting_room.db
meeting-room-mcp/: .env  .gitignore  CLAUDE.md  main.py  pyproject.toml
meeting-room-mcp/data/: meeting_room.db
meeting-room-mcp/scripts/: start_client.py  start_server.py
meeting-room-mcp/src/meeting_room_mcp/client/: main.py
meeting-room-mcp/src/meeting_room_mcp/config/: database_config.py  settings.py
meeting-room-mcp/src/meeting_room_mcp/server/: entities.py  main.py
meeting-room-mcp/src/meeting_room_mcp/server/notification/: notification_tools.py
meeting-room-mcp/src/meeting_room_mcp/server/reservation/: reservation_models.py  reservation_repository.py  reservation_schemas.py  reservation_service.py  reservation_tools.py
meeting-room-mcp/src/meeting_room_mcp/server/room/: room_enum.py  room_models.py  room_repository.py  room_schemas.py  room_service.py  room_tools.py
meeting-room-mcp/src/meeting_room_mcp/server/services/: __init__.py  email_sevice.py
meeting-room-mcp/src/meeting_room_mcp/shared/: database.py  models.py  session_manager.py
