[project]
name = "meeting-room-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "fastmcp>=2.12.0",
    "mcp>=1.13.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]
